--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#ffeb3b" />
     <meta
       name="description"
-      content="Content Key – helping creators treat their content like a real business"
+      content="Content Key – Launching Soon: a platform for creators to monetize content and work with sponsors."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Content Key – Unlock Your Journey</title>
+    <title>Content Key – Launching Soon</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
