--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    
+    <!-- Favicon (replace logo192.png with your actual logo if needed) -->
     <link rel="icon" href="%PUBLIC_URL%/logo192.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ffeb3b" />
     <meta
@@ -11,10 +14,13 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Content Key – Launching Soon</title>
+
+    <!-- Updated Title -->
+    <title>Content Key – Unlock Your Journey</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
+
